fixed text-align to history list

--- a/src/components/song-input/song-input.module.css
+++ b/src/components/song-input/song-input.module.css
@@ -55,6 +55,7 @@
   line-height: 28px;
   letter-spacing: -0.4px;
   color: #A4A3A4;
+  text-align: left;
 }
 
 .autoCompleteListItemText:hover {
